objects/Splatka__c/Splatka__c.object-meta.xml
<CustomObject>
    <description>Záznam o požadavku na platbu, stavu a později i záznam o zaplacení.</description>
    <label>Splátka</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Identifikátor splátky</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Splátky</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>