objects/Splatka__c/fields/Castka__c.field-meta.xml
<CustomField>
    <fullName>Castka__c</fullName>
    <label>Částka</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>