objects/Splatka__c/fields/Castka_plneni_pri_uhrade__c.field-meta.xml
<CustomField>
    <fullName>Castka_plneni_pri_uhrade__c</fullName>
    <label>Částka plnění v době úhrady</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>