objects/Splatka__c/fields/Cislo_uctu__c.field-meta.xml
<CustomField>
    <fullName>Cislo_uctu__c</fullName>
    <formula>Smlouva__r.Ucast__r.Ucet__r.Cislo_uctu__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Číslo účtu</label>
    <type>Text</type>
</CustomField>