objects/Splatka__c/fields/Datum_uhrady__c.field-meta.xml
<CustomField>
    <fullName>Datum_uhrady__c</fullName>
    <label>Skutečné datum úhrady</label>
    <type>Date</type>
</CustomField>