objects/Splatka__c/fields/dluh_aggregator__c.field-meta.xml
<CustomField>
    <fullName>dluh_aggregator__c</fullName>
    <formula>IF (Dluh_po_uhrade__c &lt; 0,

(VALUE( Name ) * 100000000 + 10000000 + (-Dluh_po_uhrade__c))
,
VALUE( Name ) * 100000000 +  Dluh_po_uhrade__c 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_dluh_aggregator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>