objects/Splatka__c/fields/Dluh_po_uhrade__c.field-meta.xml
<CustomField>
    <fullName>Dluh_po_uhrade__c</fullName>
    <formula>IF( Dluh_v_dobe_uhrady__c == 0,

IF(    Castka__c &lt; Castka_plneni_pri_uhrade__c,   Castka_plneni_pri_uhrade__c  -    Castka__c,     Castka_plneni_pri_uhrade__c  -  Castka__c    )

,

Dluh_v_dobe_uhrady__c - Castka__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dluh po úhradě</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>