objects/Splatka__c/fields/Dluh_v_dobe_uhrady__c.field-meta.xml
<CustomField>
    <fullName>Dluh_v_dobe_uhrady__c</fullName>
    <label>Dluh v době úhrady</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>