objects/Splatka__c/fields/Identifikacni_cislo__c.field-meta.xml
<CustomField>
    <fullName>Identifikacni_cislo__c</fullName>
    <description>Identifikace bankovního převodu pro případ zpětného jednoznačeného dohledání platby v bakovním výpisu.</description>
    <inlineHelpText>Identifikace bankovního převodu pro případ zpětného jednoznačeného dohledání platby v bakovním výpisu.</inlineHelpText>
    <label>Identifikační číslo</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>