objects/Splatka__c/fields/Kurz__c.field-meta.xml
<CustomField>
    <fullName>Kurz__c</fullName>
    <description>Určuje kurz přepočtu do CZK v čase uhrazení splátky, když je smlouva v zahraniční měně.</description>
    <inlineHelpText>Určuje kurz přepočtu do CZK v čase uhrazení splátky, když je smlouva v zahraniční měně.</inlineHelpText>
    <label>Kurz</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>