objects/Splatka__c/fields/Mena__c.field-meta.xml
<CustomField>
    <fullName>Mena__c</fullName>
    <formula>TEXT(Smlouva__r.Mena__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Měna</label>
    <type>Text</type>
</CustomField>