objects/Splatka__c/fields/Placene_obdobi_do__c.field-meta.xml
<CustomField>
    <fullName>Placene_obdobi_do__c</fullName>
    <label>Placené období do</label>
    <type>Date</type>
</CustomField>