objects/Splatka__c/fields/Placene_obdobi_od_del__c.field-meta.xml
<CustomField>
    <fullName>Placene_obdobi_od_del__c</fullName>
    <label>Placené období od</label>
    <type>Date</type>
</CustomField>