objects/Splatka__c/fields/Po_splatnosti__c.field-meta.xml
<CustomField>
    <fullName>Po_splatnosti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Po splatnosti</label>
    <type>Checkbox</type>
</CustomField>