objects/Splatka__c/fields/Posun_obdobi__c.field-meta.xml
<CustomField>
    <fullName>Posun_obdobi__c</fullName>
    <formula>IF( !ISBLANK(Dluh_po_uhrade__c) &amp;&amp; Dluh_po_uhrade__c &lt;= 0, &quot;Ano&quot;, &quot;Ne&quot;)</formula>
    <label>Jít na další období</label>
    <type>Text</type>
</CustomField>