objects/Splatka__c/fields/Predpokladane_datum_splatnosti__c.field-meta.xml
<CustomField>
    <fullName>Predpokladane_datum_splatnosti__c</fullName>
    <label>Předpokládané datum úhrady</label>
    <type>Date</type>
</CustomField>