objects/Splatka__c/fields/Smlouva__c.field-meta.xml
<CustomField>
    <fullName>Smlouva__c</fullName>
    <label>Smlouva</label>
    <referenceTo>Smlouva__c</referenceTo>
    <relationshipLabel>Splátky</relationshipLabel>
    <relationshipName>Splatky</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>