objects/Splatka__c/fields/status_aggregator__c.field-meta.xml
<CustomField>
    <fullName>status_aggregator__c</fullName>
    <formula>0+
IF( Stav_uhrady__c == &quot;Po splatnosti&quot;, 100000000, 0 )
+
IF( Stav_uhrady__c == &quot;Čeká&quot;, 10000, 0 )
+
IF( Stav_uhrady__c == &quot;Uhrazeno&quot;, 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_status_aggregator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>