objects/Splatka__c/fields/Stav__c.field-meta.xml
<CustomField>
    <fullName>Stav__c</fullName>
    <formula>IF( ISNULL(Datum_uhrady__c), &quot;Neuhrazeno&quot; , &quot;Uhrazeno&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stav</label>
    <type>Text</type>
</CustomField>