objects/Splatka__c/fields/Stav_uhrady__c.field-meta.xml
<CustomField>
    <fullName>Stav_uhrady__c</fullName>
    <formula>IF(   ISNULL(Datum_uhrady__c), 
    iF ( Po_splatnosti__c, &quot;Po splatnosti&quot;, &quot;Čeká&quot; )
, &quot;Uhrazeno&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stav úhrady</label>
    <type>Text</type>
</CustomField>