objects/Splatka__c/fields/Variabilni_symbol__c.field-meta.xml
<CustomField>
    <fullName>Variabilni_symbol__c</fullName>
    <formula>TEXT( Smlouva__r.Cislo_smlouvy_manual__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variabilní symbol</label>
    <type>Text</type>
</CustomField>