objects/Splatka__c/fields/Zpetna_platnost__c.field-meta.xml
<CustomField>
    <fullName>Zpetna_platnost__c</fullName>
    <description>Vyplňte v případě, kdy je třeba rozlišit skutečné datum úhrady a datum, kdy má být platba uznána systémem.</description>
    <inlineHelpText>Vyplňte v případě, kdy je třeba rozlišit skutečné datum úhrady a datum, kdy má být platba uznána systémem.</inlineHelpText>
    <label>Zpětná platnost</label>
    <type>Date</type>
</CustomField>