objects/Splatka__c/fields/Zpusob_platby__c.field-meta.xml
<CustomField>
    <fullName>Zpusob_platby__c</fullName>
    <label>Způsob platby</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Převodem</fullName>
                <default>true</default>
                <label>Převodem</label>
            </value>
            <value>
                <fullName>Hotovostně</fullName>
            </value>
            <value>
                <fullName>Inkaso</fullName>
            </value>
            <value>
                <fullName>Platební brána</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>