objects/Splatka__c/validationRules/Castka_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Castka_required</fullName>
    <active>true</active>
    <errorConditionFormula>Castka__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Castka__c</errorDisplayField>
    <errorMessage>Částka nesmí být nulová</errorMessage>
</ValidationRule>