objects/Splatka__c/validationRules/Kurz.validationRule-meta.xml
<ValidationRule>
    <fullName>Kurz</fullName>
    <active>true</active>
    <errorConditionFormula>Mena__c != &quot;CZK&quot; &amp;&amp;  ISBLANK(Kurz__c)</errorConditionFormula>
    <errorDisplayField>Kurz__c</errorDisplayField>
    <errorMessage>Kurz měny je nutné vyplnit, protože měna splátek není Kč.</errorMessage>
</ValidationRule>