objects/Splatka__c/validationRules/Nulove_plneni.validationRule-meta.xml
<ValidationRule>
    <fullName>Nulove_plneni</fullName>
    <active>true</active>
    <errorConditionFormula>(Smlouva__r.Aktualni_obdobi_cena__c = 0) &amp;&amp;  Castka__c &gt; 0</errorConditionFormula>
    <errorDisplayField>Castka__c</errorDisplayField>
    <errorMessage>Smlouva s nulovou částkou plnění nemůže obsahovat žádné splátky.</errorMessage>
</ValidationRule>