objects/Splatka__c/validationRules/Zpusob_platby_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Zpusob_platby_required</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Zpusob_platby__c ) == &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Zpusob_platby__c</errorDisplayField>
    <errorMessage>Povinná položka.</errorMessage>
</ValidationRule>