objects/Splatka__c/listViews/Vsechny_splatky.listView-meta.xml
<ListView>
    <fullName>Vsechny_splatky</fullName>
    <columns>NAME</columns>
    <columns>Castka__c</columns>
    <columns>Stav__c</columns>
    <columns>Predpokladane_datum_splatnosti__c</columns>
    <filterScope>Everything</filterScope>
    <label>Všechny splátky</label>
    <language>en_US</language>
</ListView>